--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "product_id=\"114700014\"\n",
-    "url = f\"https://www.ceneo.pl/114700014#tab=reviews_scroll\"\n",
+    "url = f\"https://www.ceneo.pl/{product_id}/opinie-2\"\n",
     "response = requests.get(url)"
    ]
   },
@@ -56,8 +56,50 @@
    "outputs": [],
    "source": [
     "page_dom = BeautifulSoup(response.text, \"html.parser\")\n",
-    "page_dom\n"
+    "print(type(page_dom))\n",
+    "opinions = page_dom.select(\"div.js_product-review\")\n",
+    "print(type(opinions))\n",
+    "opinion = opinions.pop(0)\n",
+    "print(type(opinion))\n",
+    "print(opinion)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ekstrakcja składowych pojedynczej opinii\n",
+    "\n",
+    "|Składowa | Selektor | Zmienna |\n",
+    "|---------|----------|---------|\n",
+    "|id opinii|[\"data-entry-id\"]|opinion_id|\n",
+    "|autor|span.user-post__author-name|author|\n",
+    "|rekomendacje|span.user-post__author-recomendation|recommendation|\n",
+    "|gwiazdki|span.user-post__score-count|rating|\n",
+    "|treść|div.user-post__text|content|\n",
+    "|lista zalet|div.review-feature__title--positives ~ div.review-feature__item|pros|\n",
+    "|lista wad|div.review-feature__title--negatives ~ div.review-feature__item|cons|\n",
+    "|dla ilu przydatne|span[id^=\"votes-yes\"]|useful|\n",
+    "|dla ilu nieprzydatne|span[id^=\"votes-no\"]|useless|\n",
+    "|data wystawienia|span.user-post__published > time:nth-child(1)[\"datetime\"]|post_date|\n",
+    "|data zakupu|span.user-post__published > time:nth-child(2)[\"datetime\"]|purchase_date|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opinion_id = opinion[\"data-entry-id\"]\n",
+    "author = opinion.select_one(\"span.user-post__author-name\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
